# fast-graphrag

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
benchmarks/: README.md  _domain.py  create_dbs.bat  create_dbs.sh  evaluate_dbs.bat  evaluate_dbs.sh  graph_benchmark.py  lightrag_benchmark.py  nano_benchmark.py  vdb_benchmark.py
benchmarks/questions/: 2wikimultihopqa_101.json  2wikimultihopqa_51.json
benchmarks/results/vdb/: 2wikimultihopqa_101.json  (+1 more)
examples/: checkpointing.ipynb  custom_llm.py  gemini_vertexai_llm.py  query_parameters.ipynb
fast_graphrag/: __init__.py  _exceptions.py  _graphrag.py  _models.py  _prompt.py  _types.py  _utils.py
fast_graphrag/_llm/: __init__.py  _base.py  _default.py  _llm_ollama.py  _llm_openai.py
fast_graphrag/_policies/: _base.py  _graph_upsert.py  _ranking.py
fast_graphrag/_services/: __init__.py  _base.py  _chunk_extraction.py  _information_extraction.py  _state_manager.py
fast_graphrag/_storage/: __init__.py  _base.py  _blob_pickle.py  _default.py  _gdb_igraph.py  _ikv_pickle.py  _namespace copy.py  _namespace.py  _vdb_hnswlib.py
tests/: _graphrag_test.py  _models_test.py  _types_test.py  _utils_test.py
tests/_llm/: _base_test.py  _llm_openai_test.py
tests/_policies/: _graph_upsert_test.py  _ranking_test.py
tests/_services/: _chunk_extraction_test.py  _information_extraction_test.py
tests/_storage/: _base_test.py  _blob_pickle_test.py  _gdb_igraph_test.py  _ikv_pickle_test.py  _namespace_test.py  _vdb_hnswlib_test.py
(+8 files in other folders)
